--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@ about: 'about.html'
       <nav class="mobile__nav">
          <ul>
             <li class="nav__item"><a href="#">Home</a></li>
-            <li class="nav__item"><a href="#">Code</a></li>
-            <li class="nav__item"><a href="#">Download</a></li>
-            <li class="nav__item"><a href="#">Features</a></li>
-            <li class="nav__item"><a href="#">Community</a></li>
-            <li class="nav__item"><a href="#">Blog</a></li>
+            <li class="nav__item"><a href="#">About</a></a></li>
+            <li class="nav__item"><a href="#">Experience</a></li>
+            <li class="nav__item"><a href="#">Say Hello</a></li>
          </ul>
       </nav><!--mobile__nav-->
    </div><!--mobile-->
