Added about.html / Fixed last issue for header on iPhone 7 Plus

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 author: Cosmin Haims
 title: Home
 cover: false
-about: 'about.html'
+about: 'index.html'
 ---
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
@@ -26,8 +26,8 @@ about: 'about.html'
       <input class="mobile__input" type="checkbox" id="checkbox" />
       <nav class="mobile__nav">
          <ul>
-            <li class="nav__item"><a href="#">Home</a></li>
-            <li class="nav__item"><a href="#">About</a></li>
+            <li class="nav__item"><a href="https://jsthack.github.io">Home</a></li>
+            <li class="nav__item"><a href="about.html">About</a></li>
             <li class="nav__item"><a href="#">Experience</a></li>
             <li class="nav__item"><a href="#">Contact</a></li>
          </ul>
