--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ about: 'index.html'
       <input class="mobile__input" type="checkbox" id="checkbox" />
       <nav class="mobile__nav">
          <ul>
-            <li class="nav__item"><a href="https://jsthack.github.io">Home</a></li>
+            <li class="nav__item"><a href='{{ site.baseurl }}{{ page.about }}'>Home</a></li>
             <li class="nav__item"><a href="about.html">About</a></li>
             <li class="nav__item"><a href="#">Experience</a></li>
             <li class="nav__item"><a href="#">Contact</a></li>
